## Process this file with automake to produce Makefile.in.

EXTRA_DIST =
EXTRA_DIST += 00gnulib.m4
EXTRA_DIST += __inline.m4
EXTRA_DIST += absolute-header.m4
EXTRA_DIST += acl.m4
EXTRA_DIST += alloca.m4
EXTRA_DIST += arpa_inet_h.m4
EXTRA_DIST += assert_h.m4
EXTRA_DIST += backupfile.m4
EXTRA_DIST += btowc.m4
EXTRA_DIST += build-to-host.m4
EXTRA_DIST += builtin-expect.m4
EXTRA_DIST += c-bool.m4
EXTRA_DIST += c32rtomb.m4
EXTRA_DIST += calloc.m4
EXTRA_DIST += canonicalize.m4
EXTRA_DIST += chdir-long.m4
EXTRA_DIST += chown.m4
EXTRA_DIST += clock_time.m4
EXTRA_DIST += close.m4
EXTRA_DIST += closedir.m4
EXTRA_DIST += codeset.m4
EXTRA_DIST += ctype_h.m4
EXTRA_DIST += cycle-check.m4
EXTRA_DIST += d-ino.m4
EXTRA_DIST += d-type.m4
EXTRA_DIST += dirent_h.m4
EXTRA_DIST += dirfd.m4
EXTRA_DIST += double-slash-root.m4
EXTRA_DIST += dup.m4
EXTRA_DIST += dup2.m4
EXTRA_DIST += environ.m4
EXTRA_DIST += errno_h.m4
EXTRA_DIST += error.m4
EXTRA_DIST += error_h.m4
EXTRA_DIST += exponentd.m4
EXTRA_DIST += exponentf.m4
EXTRA_DIST += exponentl.m4
EXTRA_DIST += extensions-aix.m4
EXTRA_DIST += extensions.m4
EXTRA_DIST += extern-inline.m4
EXTRA_DIST += fchdir.m4
EXTRA_DIST += fclose.m4
EXTRA_DIST += fcntl-o.m4
EXTRA_DIST += fcntl-safer.m4
EXTRA_DIST += fcntl.m4
EXTRA_DIST += fcntl_h.m4
EXTRA_DIST += fdopen.m4
EXTRA_DIST += fdopendir.m4
EXTRA_DIST += fflush.m4
EXTRA_DIST += filenamecat.m4
EXTRA_DIST += flexmember.m4
EXTRA_DIST += float_h.m4
EXTRA_DIST += fnmatch.m4
EXTRA_DIST += fnmatch_h.m4
EXTRA_DIST += fopen.m4
EXTRA_DIST += fpieee.m4
EXTRA_DIST += free.m4
EXTRA_DIST += frexp.m4
EXTRA_DIST += frexpl.m4
EXTRA_DIST += fseterr.m4
EXTRA_DIST += fstat.m4
EXTRA_DIST += fstatat.m4
EXTRA_DIST += ftruncate.m4
EXTRA_DIST += fts.m4
EXTRA_DIST += getcwd.m4
EXTRA_DIST += getdtablesize.m4
EXTRA_DIST += getgroups.m4
EXTRA_DIST += getloadavg.m4
EXTRA_DIST += getlocalename_l.m4
EXTRA_DIST += getprogname.m4
EXTRA_DIST += getrandom.m4
EXTRA_DIST += gettext.m4
EXTRA_DIST += gettext_h.m4
EXTRA_DIST += gettimeofday.m4
EXTRA_DIST += getugroups.m4
EXTRA_DIST += gnulib-common.m4
EXTRA_DIST += gnulib-i18n.m4
EXTRA_DIST += host-cpu-c-abi.m4
EXTRA_DIST += i-ring.m4
EXTRA_DIST += iconv.m4
EXTRA_DIST += include_next.m4
EXTRA_DIST += inet_pton.m4
EXTRA_DIST += inline.m4
EXTRA_DIST += intl-thread-locale.m4
EXTRA_DIST += intlmacosx.m4
EXTRA_DIST += intmax_t.m4
EXTRA_DIST += inttostr.m4
EXTRA_DIST += inttypes.m4
EXTRA_DIST += inttypes_h.m4
EXTRA_DIST += ioctl.m4
EXTRA_DIST += isblank.m4
EXTRA_DIST += isnand.m4
EXTRA_DIST += isnanf.m4
EXTRA_DIST += isnanl.m4
EXTRA_DIST += iswblank.m4
EXTRA_DIST += iswctype.m4
EXTRA_DIST += iswdigit.m4
EXTRA_DIST += iswpunct.m4
EXTRA_DIST += iswxdigit.m4
EXTRA_DIST += langinfo_h.m4
EXTRA_DIST += largefile.m4
EXTRA_DIST += lchmod.m4
EXTRA_DIST += lchown.m4
EXTRA_DIST += lcmessage.m4
EXTRA_DIST += lib-ld.m4
EXTRA_DIST += lib-link.m4
EXTRA_DIST += lib-prefix.m4
EXTRA_DIST += libunistring-base.m4
EXTRA_DIST += limits-h.m4
EXTRA_DIST += link.m4
EXTRA_DIST += localcharset.m4
EXTRA_DIST += locale-en.m4
EXTRA_DIST += locale-fr.m4
EXTRA_DIST += locale-ja.m4
EXTRA_DIST += locale-tr.m4
EXTRA_DIST += locale-zh.m4
EXTRA_DIST += locale_h.m4
EXTRA_DIST += localeconv.m4
EXTRA_DIST += localename.m4
EXTRA_DIST += lock.m4
EXTRA_DIST += lstat.m4
EXTRA_DIST += malloc.m4
EXTRA_DIST += malloca.m4
EXTRA_DIST += math_h.m4
EXTRA_DIST += mbchar.m4
EXTRA_DIST += mbiter.m4
EXTRA_DIST += mbrtoc32.m4
EXTRA_DIST += mbrtowc.m4
EXTRA_DIST += mbsinit.m4
EXTRA_DIST += mbsrtowcs.m4
EXTRA_DIST += mbstate_t.m4
EXTRA_DIST += mbtowc.m4
EXTRA_DIST += memchr.m4
EXTRA_DIST += memmem.m4
EXTRA_DIST += mempcpy.m4
EXTRA_DIST += memrchr.m4
EXTRA_DIST += mgetgroups.m4
EXTRA_DIST += minmax.m4
EXTRA_DIST += mkancesdirs.m4
EXTRA_DIST += mkdir-p.m4
EXTRA_DIST += mkdir.m4
EXTRA_DIST += mkfifo.m4
EXTRA_DIST += mktime.m4
EXTRA_DIST += mmap-anon.m4
EXTRA_DIST += mode_t.m4
EXTRA_DIST += msvc-inval.m4
EXTRA_DIST += msvc-nothrow.m4
EXTRA_DIST += multiarch.m4
EXTRA_DIST += musl.m4
EXTRA_DIST += nan-mips.m4
EXTRA_DIST += nanosleep.m4
EXTRA_DIST += netinet_in_h.m4
EXTRA_DIST += nl_langinfo.m4
EXTRA_DIST += nls.m4
EXTRA_DIST += nocrash.m4
EXTRA_DIST += nullptr.m4
EXTRA_DIST += off64_t.m4
EXTRA_DIST += off_t.m4
EXTRA_DIST += once.m4
EXTRA_DIST += open-cloexec.m4
EXTRA_DIST += open-slash.m4
EXTRA_DIST += open.m4
EXTRA_DIST += openat.m4
EXTRA_DIST += opendir.m4
EXTRA_DIST += pathmax.m4
EXTRA_DIST += perror.m4
EXTRA_DIST += pid_t.m4
EXTRA_DIST += pipe.m4
EXTRA_DIST += pipe2.m4
EXTRA_DIST += po.m4
EXTRA_DIST += printf.m4
EXTRA_DIST += priv-set.m4
EXTRA_DIST += progtest.m4
EXTRA_DIST += pselect.m4
EXTRA_DIST += pthread-cond.m4
EXTRA_DIST += pthread-mutex.m4
EXTRA_DIST += pthread-once.m4
EXTRA_DIST += pthread-rwlock.m4
EXTRA_DIST += pthread-spin.m4
EXTRA_DIST += pthread-thread.m4
EXTRA_DIST += pthread_h.m4
EXTRA_DIST += pthread_mutex_timedlock.m4
EXTRA_DIST += pthread_rwlock_rdlock.m4
EXTRA_DIST += pthread_sigmask.m4
EXTRA_DIST += putenv.m4
EXTRA_DIST += quote.m4
EXTRA_DIST += quotearg.m4
EXTRA_DIST += raise.m4
EXTRA_DIST += random.m4
EXTRA_DIST += random_r.m4
EXTRA_DIST += rawmemchr.m4
EXTRA_DIST += readdir.m4
EXTRA_DIST += readlink.m4
EXTRA_DIST += readlinkat.m4
EXTRA_DIST += realloc.m4
EXTRA_DIST += reallocarray.m4
EXTRA_DIST += regex.m4
EXTRA_DIST += relocatable-lib.m4
EXTRA_DIST += remove.m4
EXTRA_DIST += rename.m4
EXTRA_DIST += renameat.m4
EXTRA_DIST += rmdir.m4
EXTRA_DIST += save-cwd.m4
EXTRA_DIST += savewd.m4
EXTRA_DIST += scandir.m4
EXTRA_DIST += sched_h.m4
EXTRA_DIST += sched_yield.m4
EXTRA_DIST += secure_getenv.m4
EXTRA_DIST += select.m4
EXTRA_DIST += selinux-selinux-h.m4
EXTRA_DIST += semaphore.m4
EXTRA_DIST += setenv.m4
EXTRA_DIST += setlocale.m4
EXTRA_DIST += setlocale_null.m4
EXTRA_DIST += signal_h.m4
EXTRA_DIST += signalblocking.m4
EXTRA_DIST += signbit.m4
EXTRA_DIST += size_max.m4
EXTRA_DIST += sleep.m4
EXTRA_DIST += snan.m4
EXTRA_DIST += snprintf.m4
EXTRA_DIST += socketlib.m4
EXTRA_DIST += sockets.m4
EXTRA_DIST += socklen.m4
EXTRA_DIST += sockpfaf.m4
EXTRA_DIST += ssize_t.m4
EXTRA_DIST += stat-time.m4
EXTRA_DIST += stat.m4
EXTRA_DIST += std-gnu11.m4
EXTRA_DIST += stdalign.m4
EXTRA_DIST += stdckdint_h.m4
EXTRA_DIST += stddef_h.m4
EXTRA_DIST += stdint.m4
EXTRA_DIST += stdint_h.m4
EXTRA_DIST += stdio_h.m4
EXTRA_DIST += stdlib_h.m4
EXTRA_DIST += stpcpy.m4
EXTRA_DIST += strdup.m4
EXTRA_DIST += strerror.m4
EXTRA_DIST += strerror_r.m4
EXTRA_DIST += string_h.m4
EXTRA_DIST += stringeq.m4
EXTRA_DIST += strncpy.m4
EXTRA_DIST += strnlen.m4
EXTRA_DIST += strstr.m4
EXTRA_DIST += symlink.m4
EXTRA_DIST += symlinkat.m4
EXTRA_DIST += sys_cdefs_h.m4
EXTRA_DIST += sys_ioctl_h.m4
EXTRA_DIST += sys_random_h.m4
EXTRA_DIST += sys_select_h.m4
EXTRA_DIST += sys_socket_h.m4
EXTRA_DIST += sys_stat_h.m4
EXTRA_DIST += sys_time_h.m4
EXTRA_DIST += sys_types_h.m4
EXTRA_DIST += sys_uio_h.m4
EXTRA_DIST += sys_wait_h.m4
EXTRA_DIST += tempname.m4
EXTRA_DIST += thread.m4
EXTRA_DIST += threadlib.m4
EXTRA_DIST += time.m4
EXTRA_DIST += time_h.m4
EXTRA_DIST += time_r.m4
EXTRA_DIST += time_rz.m4
EXTRA_DIST += timegm.m4
EXTRA_DIST += tm_gmtoff.m4
EXTRA_DIST += tmpdir.m4
EXTRA_DIST += tmpfile.m4
EXTRA_DIST += trunc.m4
EXTRA_DIST += truncl.m4
EXTRA_DIST += tzset.m4
EXTRA_DIST += uchar_h.m4
EXTRA_DIST += unicase_h.m4
EXTRA_DIST += unictype_h.m4
EXTRA_DIST += uninorm_h.m4
EXTRA_DIST += unistd-safer.m4
EXTRA_DIST += unistd_h.m4
EXTRA_DIST += unitypes_h.m4
EXTRA_DIST += unlink.m4
EXTRA_DIST += unlinkat.m4
EXTRA_DIST += unlinkdir.m4
EXTRA_DIST += unlocked-io.m4
EXTRA_DIST += usleep.m4
EXTRA_DIST += vararrays.m4
EXTRA_DIST += vasnprintf.m4
EXTRA_DIST += visibility.m4
EXTRA_DIST += warn-on-use.m4
EXTRA_DIST += wchar_h.m4
EXTRA_DIST += wcrtomb.m4
EXTRA_DIST += wctob.m4
EXTRA_DIST += wctomb.m4
EXTRA_DIST += wctype.m4
EXTRA_DIST += wctype_h.m4
EXTRA_DIST += wcwidth.m4
EXTRA_DIST += windows-rc.m4
EXTRA_DIST += wint_t.m4
EXTRA_DIST += wmemchr.m4
EXTRA_DIST += wmempcpy.m4
EXTRA_DIST += xalloc.m4
EXTRA_DIST += xgetcwd.m4
EXTRA_DIST += xsize.m4
EXTRA_DIST += yield.m4
EXTRA_DIST += zzgnulib.m4
