## Process this file with automake to produce Makefile.in.

EXTRA_DIST =
EXTRA_DIST += 00gnulib.m4
EXTRA_DIST += absolute-header.m4
EXTRA_DIST += assert_h.m4
EXTRA_DIST += extensions.m4
EXTRA_DIST += gnulib-common.m4
EXTRA_DIST += include_next.m4
EXTRA_DIST += pid_t.m4
EXTRA_DIST += signal_h.m4
EXTRA_DIST += sys_select_h.m4
EXTRA_DIST += sys_socket_h.m4
EXTRA_DIST += sys_time_h.m4
EXTRA_DIST += warn-on-use.m4
EXTRA_DIST += zzgnulib.m4
